--- a/nodejsport/views/login.hbs
+++ b/nodejsport/views/login.hbs
@@ -1,65 +1,33 @@
-{
-  title: "welcome"
-}
-<span style="display: none;" id="scriptLoader"></span>
-<div class="appNoSidebarBodyWrapper">
+<div class="cmsLoginFormArea defaultMainShadows">
 
-    <?php 
-        echo $adminUIRender->renderAdminTopBar('../../', true, false, false);
-    ?>
+    <h1 class="centered">Admin Login</h1>
 
-    <div class="cmsMainContentWrapper">
+    <form class="defaultForm" id="loginForm" style="margin-left: 2em; margin-right: 2em;" method="POST" action="./">
         
-    <div class="maxHeight xyCenteredFlex flexDirectionColumn marginLeftRight90 styledText textColorThemeGray">
-            <div class="cmsLoginFormArea defaultMainShadows">
-                
-                <h1 class="centered">Admin Login</h1>
-                
-                <form class="defaultForm" id="loginForm" style="margin-left: 2em; margin-right: 2em;" method="POST" action="./">
-                    
-                    <label for="usernameEmail"><p>Username/Email</p></label>
-                    <input class="defaultInput" type="text" name="usernameEmail" id="usernameEmail" placeholder="Username/Email...">
-                    <span id="usernameEmailError" class="underInputError" style="display: none;">Enter a username or email.</span>
-                    <span id="noUsernameEmailError" class="underInputError" style="display: none;">There is no account with this username or email.</span>
-                    
-                    <br><br>
-                    
-                    <label for="password"><p>Password</p></label>
-                    <input class="defaultInput" type="password" name="password" id="password" placeholder="Password...">
-                    <span id="passwordError" class="underInputError" style="display: none;">Enter your password.</span>
-                    <span id="noMatchError" class="underInputError" style="display: none;">Password is incorrect.</span>
+        <label for="usernameEmail"><p>Username/Email</p></label>
+        <input class="defaultInput" type="text" name="usernameEmail" id="usernameEmail" placeholder="Username/Email...">
+        <span id="usernameEmailError" class="underInputError" style="display: none;">Enter a username or email.</span>
+        <span id="noUsernameEmailError" class="underInputError" style="display: none;">There is no account with this username or email.</span>
+        
+        <br><br>
+        
+        <label for="password"><p>Password</p></label>
+        <input class="defaultInput" type="password" name="password" id="password" placeholder="Password...">
+        <span id="passwordError" class="underInputError" style="display: none;">Enter your password.</span>
+        <span id="noMatchError" class="underInputError" style="display: none;">Password is incorrect.</span>
 
-                    <?php
-                        // Generate an auth token for the form
-                        require_once '../../../lib/table/authToken.php';
-                        $token = new authToken();
-                        $token->authName = 'adminLogin';
-                        $token->set();
-                    ?>
+        {{!-- AUTH TOKEN --}}
 
-                    <input type="hidden" name="authToken" id="authToken" value="<?php echo htmlspecialchars($token->authTokenId); ?>">
-                    
-                    <br><br>
-                    
-                    <button class="smallButtonWrapper greenButton xyCenteredFlex centered defaultMainShadows" type="submit">Go!</button>
-                
-                </form>
+        <input type="hidden" name="authToken" id="authToken" value="<?php echo htmlspecialchars($token->authTokenId); ?>">
+        
+        <br><br>
+        
+        <button class="smallButtonWrapper greenButton xyCenteredFlex centered defaultMainShadows" type="submit">Go!</button>
 
-                <br>
+    </form>
 
-                <p class="centered">Don't have an account? <a href="../createaccount">Create one here!</a></p>
+    <br>
 
-            </div>
-        </div>
-    
-    </div>
-    
-    <?php
-        echo $adminUIRender->renderAdminFooter('../../', true, true);
-    ?>
-
-    <?php 
-        // echo $adminUIRender->renderMobileNavBar('../../');
-    ?>
+    <p class="centered">Don't have an account? <a href="../createaccount">Create one here!</a></p>
 
 </div>
