--- a/public/css/app/main.css
+++ b/public/css/app/main.css
@@ -12,7 +12,7 @@
 
    @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
-*, *::before, *::after {
+*:not(.EasyMDEContainer *), *:not(.EasyMDEContainer *)::before, *:not(.EasyMDEContainer *)::after {
 	font-family: 'Source Sans Pro', sans-serif;
 	margin: 0;
 	padding: 0;
