--- a/public/css/app/admin/adminMain.css
+++ b/public/css/app/admin/adminMain.css
@@ -527,6 +527,10 @@ a.noUnderline {
 	color: var(--documentsColorTheme);
 }
 
+.textColorThemeNotes h1, .textColorThemeNotes h2, .textColorThemeNotes h3, .textColorThemeNotes h4, .textColorThemeNotes h5, .textColorThemeNotes h6 {
+	color: var(--grayTextColorTheme);
+}
+
 .textColorThemeInventory h1, .textColorThemeInventory h2, .textColorThemeInventory h3, .textColorThemeInventory h4, .textColorThemeInventory h5, .textColorThemeInventory h6 {
 	color: var(--inventoryColorTheme);
 }
